--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
         "prefix:css": "postcss -u autoprefixer -b \"last 10 versions\" css/style.comp.css -o css/style.prefix.css",
         "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
-        "build": "npm-run-all compile:sass concat:css prefix:css compress:css"
+        "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
     },
     "author": "arun",
     "license": "ISC",
